// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button basic button 1`] = `
"<bolt-button
   align=\\"center\\"    color=\\"primary\\"    size=\\"medium\\"            transform=\\"none\\"     
  
      
  
  >

    <button  class=\\"c-bolt-button  c-bolt-button--medium   c-bolt-button--primary  c-bolt-button--center \\" is=\\"shadow-root\\">
          <replace-with-children class=\\"c-bolt-button__icon is-empty\\"></replace-with-children>
  
    <replace-with-children class=\\"c-bolt-button__item \\">Hello World</replace-with-children>
          <replace-with-children class=\\"c-bolt-button__icon is-empty\\"></replace-with-children>
  
  </button>
</bolt-button>"
`;

exports[`button button tag: a 1`] = `
"<bolt-button
   align=\\"center\\"    color=\\"primary\\"    size=\\"medium\\"            transform=\\"none\\"     
  
      
  
  >

    <a  class=\\"c-bolt-button  c-bolt-button--medium   c-bolt-button--primary  c-bolt-button--center \\" is=\\"shadow-root\\">
          <replace-with-children class=\\"c-bolt-button__icon is-empty\\"></replace-with-children>
  
    <replace-with-children class=\\"c-bolt-button__item \\">Hello World</replace-with-children>
          <replace-with-children class=\\"c-bolt-button__icon is-empty\\"></replace-with-children>
  
  </a>
</bolt-button>"
`;

exports[`button button tag: button 1`] = `
"<bolt-button
   align=\\"center\\"    color=\\"primary\\"    size=\\"medium\\"            transform=\\"none\\"     
  
      
  
  >

    <button  class=\\"c-bolt-button  c-bolt-button--medium   c-bolt-button--primary  c-bolt-button--center \\" is=\\"shadow-root\\">
          <replace-with-children class=\\"c-bolt-button__icon is-empty\\"></replace-with-children>
  
    <replace-with-children class=\\"c-bolt-button__item \\">Hello World</replace-with-children>
          <replace-with-children class=\\"c-bolt-button__icon is-empty\\"></replace-with-children>
  
  </button>
</bolt-button>"
`;

exports[`button button tag: link 1`] = `
"<bolt-button
   align=\\"center\\"    color=\\"primary\\"    size=\\"medium\\"            transform=\\"none\\"     
  
      
  
  >

    <a  class=\\"c-bolt-button  c-bolt-button--medium   c-bolt-button--primary  c-bolt-button--center \\" is=\\"shadow-root\\">
          <replace-with-children class=\\"c-bolt-button__icon is-empty\\"></replace-with-children>
  
    <replace-with-children class=\\"c-bolt-button__item \\">Hello World</replace-with-children>
          <replace-with-children class=\\"c-bolt-button__icon is-empty\\"></replace-with-children>
  
  </a>
</bolt-button>"
`;

exports[`button button tag: reset 1`] = `
"<bolt-button
   align=\\"center\\"    color=\\"primary\\"    size=\\"medium\\"            transform=\\"none\\"     
  
      
   type=\\"reset\\"
  >

    <button  type=\\"reset\\" class=\\"c-bolt-button  c-bolt-button--medium   c-bolt-button--primary  c-bolt-button--center \\" is=\\"shadow-root\\">
          <replace-with-children class=\\"c-bolt-button__icon is-empty\\"></replace-with-children>
  
    <replace-with-children class=\\"c-bolt-button__item \\">Hello World</replace-with-children>
          <replace-with-children class=\\"c-bolt-button__icon is-empty\\"></replace-with-children>
  
  </button>
</bolt-button>"
`;

exports[`button button tag: submit 1`] = `
"<bolt-button
   align=\\"center\\"    color=\\"primary\\"    size=\\"medium\\"            transform=\\"none\\"     
  
      
   type=\\"submit\\"
  >

    <button  type=\\"submit\\" class=\\"c-bolt-button  c-bolt-button--medium   c-bolt-button--primary  c-bolt-button--center \\" is=\\"shadow-root\\">
          <replace-with-children class=\\"c-bolt-button__icon is-empty\\"></replace-with-children>
  
    <replace-with-children class=\\"c-bolt-button__item \\">Hello World</replace-with-children>
          <replace-with-children class=\\"c-bolt-button__icon is-empty\\"></replace-with-children>
  
  </button>
</bolt-button>"
`;
